force-app/main/default/objects/SIC_Codes__c/SIC_Codes__c.object-meta.xml
<CustomObject>
    <description>Maps SIC Codes to class and sets default Primary business for a  SIC code</description>
    <label>SIC Codes</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>SIC Codes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIC Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>