force-app/main/default/objects/SIC_Codes__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>The values in this field maps to the Class field on Account</description>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural Production</fullName>
            </value>
            <value>
                <fullName>Agricultural Svcs</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Airports &amp; Aviation Svcs</fullName>
            </value>
            <value>
                <fullName>Asphalt, Terminal</fullName>
            </value>
            <value>
                <fullName>Auto Maintenance</fullName>
            </value>
            <value>
                <fullName>Auto Retail</fullName>
            </value>
            <value>
                <fullName>Aviation Related Services</fullName>
            </value>
            <value>
                <fullName>Banks, Financial Institutions &amp; Bus Svcs</fullName>
            </value>
            <value>
                <fullName>Base Oil, Blender, Packager, or Marketer</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>Brokers - Waste &amp; Environmental Svcs</fullName>
            </value>
            <value>
                <fullName>Building Materials (excl Lumber Mills)</fullName>
            </value>
            <value>
                <fullName>Chemical - Distributor</fullName>
            </value>
            <value>
                <fullName>Chemical Manufacturing</fullName>
            </value>
            <value>
                <fullName>Chemical Mfg - Specialty</fullName>
            </value>
            <value>
                <fullName>Chemical Pipeline</fullName>
            </value>
            <value>
                <fullName>Church, Synagogue, Other Religious Locations</fullName>
            </value>
            <value>
                <fullName>College (2 yr, Junior, Community Colleges)</fullName>
            </value>
            <value>
                <fullName>Colleges &amp; Universities</fullName>
            </value>
            <value>
                <fullName>Construction, Gen Contractors &amp; Builders</fullName>
            </value>
            <value>
                <fullName>Cruise Lines</fullName>
            </value>
            <value>
                <fullName>Dealerships - Auto</fullName>
            </value>
            <value>
                <fullName>Dealerships - Recreational &amp; Machinery</fullName>
            </value>
            <value>
                <fullName>Drill Rig Owners</fullName>
            </value>
            <value>
                <fullName>Dry Cleaners</fullName>
            </value>
            <value>
                <fullName>Emergency Response Management</fullName>
            </value>
            <value>
                <fullName>Eng &amp; Consult - Civil/Heavy Construction</fullName>
            </value>
            <value>
                <fullName>Eng &amp; Consult - Drilling</fullName>
            </value>
            <value>
                <fullName>Eng &amp; Consult - Enviro Remediation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>