force-app/main/default/objects/SIC_Codes__c/fields/Class_Code__c.field-meta.xml
<CustomField>
    <fullName>Class_Code__c</fullName>
    <label>Class Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>