force-app/main/default/objects/SIC_Codes__c/fields/Sales_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Business_Unit__c</fullName>
    <label>Sales Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>Emerald Services</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>Healthcare Services</fullName>
            </value>
            <value>
                <fullName>Industrial Services</fullName>
            </value>
            <value>
                <fullName>Kleen Performance Products</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>Safety-Kleen</fullName>
            </value>
            <value>
                <fullName>Thermo Fluids</fullName>
            </value>
            <value>
                <fullName>Daylighting and Production Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>