force-app/main/default/objects/SIC_Codes__c/fields/SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>SIC_Description__c</fullName>
    <label>SIC Description</label>
    <type>TextArea</type>
</CustomField>