force-app/main/default/objects/SIC_Codes__c/listViews/ALL_SIC.listView-meta.xml
<ListView>
    <fullName>ALL_SIC</fullName>
    <columns>NAME</columns>
    <columns>Vertical__c</columns>
    <columns>Class__c</columns>
    <columns>Class_Code__c</columns>
    <columns>SIC_Code__c</columns>
    <columns>SIC_Description__c</columns>
    <columns>Sales_Business_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL SIC</label>
    <language>en_US</language>
</ListView>